--- a/Dockerfile_original
+++ b/Dockerfile_original
@@ -2,6 +2,11 @@ FROM ilsf1004/face-recognition:2.2
 
 USER root
 
+RUN git config --global --unset http.proxy
+RUN git config --global --unset https.proxy
+
+RUN git clone https://github.com/dbswlgp/app-repo.git
+
 COPY app-repo/face_recogniser.pkl /facenet/face-recognition/model
 
 WORKDIR /facenet/face-recognition
